# prodeck

./: .gitignore  CLAUDE.md  LICENSE  README.md
agent/: README.md  pyproject.toml  run.py
agent/prodeck_agent/: gen_schema.py  main.py  service.py  tray.py
agent/prodeck_agent/core/: apps.py  audio.py  config.py  engine.py  models.py  net.py  pairing.py  plugins.py  state.py  system.py  tls.py  widgets.py  window.py
agent/prodeck_agent/core/actions/: hotkey.py  open_app.py  open_path.py  open_url.py  shell.py  text.py
agent/prodeck_agent/core/platform/: __init__.py  base.py  linux.py  windows.py
agent/prodeck_agent/plugins/: __init__.py  notify.py
agent/prodeck_agent/server/: app.py  ws.py
agent/prodeck_agent/static/: index.html  manifest.webmanifest
agent/prodeck_agent/static/assets/: index-98TXuKk7.js  index-BETZrKFr.css  index-BG-auunr.css  index-BRav4DaG.js  index-Bf5O3cJ1.css  index-Bk-cbe82.css  index-BwHQiXn9.css  index-C5zQaEJg.css  index-C9jRJmPm.js  index-CD0BNAUN.js  index-CMYPIG8J.css  index-CT8GtY1F.js  index-Cb2BhKl3.css  index-Ch-iQa4f.css  index-CsoT5OSG.js  index-Ctd0z5Ms.css  index-D5gVuxFz.js  index-DJYXOmxG.js  index-DW_lg1bt.css  index-D_SYOjyk.js  index-DbLAzaRd.js  index-Df81BLbu.js  index-DfRMOGNy.css  index-Dg81pa5w.js  index-DnFHnBRu.js  index-Dsms1r_r.js  index-DtqQhUWu.js  index-DuZUjPYM.js  index-Y32eYL2y.js  index-dnKZHYvm.js  index-kPZ_ud6e.css  index-uosdZEr0.js
agent/tests/: test_autoprofile.py  test_config.py  test_deck_save.py  test_engine.py  test_file_sync.py  test_macro_shell_state.py  test_models.py  test_platform.py  test_plugins.py  test_widgets.py  test_ws.py
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/: ButtonIcon.tsx  ConnectScreen.tsx  DeckButton.tsx  DeckGrid.tsx  StatusBar.tsx  Toast.tsx
app/src/components/edit/: AppPicker.tsx  Appearance.tsx  ColorPicker.tsx  EditorSheet.tsx  IconPicker.tsx  MacroBuilder.tsx  ManageSheet.tsx  MediaPresets.tsx  PluginEditor.tsx  QuickActions.tsx  Sheet.tsx
app/src/lib/: deckOps.ts  identity.ts  keepAwake.ts  useGridMetrics.ts  useLongPress.ts
app/src/store/: useDeck.ts  usePrefs.ts
app/src/types/: protocol.ts
app/src/ws/: client.ts
app/tests/: deckOps.test.ts
docs/: 01-visao-e-conceito.md  02-analise-de-tecnologias.md  03-arquitetura.md  04-plano-de-desenvolvimento.md  05-modo-painel.md
plugins/prodeck-discord/: README.md  pyproject.toml
plugins/prodeck-discord/prodeck_discord/: __init__.py  auth.py  cli.py  plugin.py  rpc.py
plugins/prodeck-discord/tests/: test_rpc.py
scripts/: build-binary.sh  gen-types.sh
