[project]
name = "prodeck-agent"
version = "0.1.0"
description = "ProDeck — agente que executa ações no PC a partir do deck no celular"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "loguru>=0.7",
    "pillow>=12.2.0",
    "pynput>=1.8.2",
    "pystray>=0.19.5",
    "qrcode>=8.0",
]

[project.scripts]
prodeck-agent = "prodeck_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prodeck_agent"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "websockets>=16.0",
]
