[project]
name = "prodeck-agent"
version = "1.3.0"
description = "ProDeck — agente que executa ações no PC a partir do deck no celular"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Alberto Tadashi", email = "alberto@wtt.com.br" }]
keywords = [
    "stream-deck",
    "deck",
    "produtividade",
    "atalhos",
    "automação",
    "macro",
    "pwa",
    "websocket",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=43",
    "fastapi[standard]>=0.115",
    "loguru>=0.7",
    "pillow>=12.2.0",
    "pynput>=1.8.2",
    "pystray>=0.19.5",
    "qrcode>=8.0",
]

[project.scripts]
prodeck-agent = "prodeck_agent.main:main"

# Ações de plugin: cada entry point aponta para um ActionPlugin. Um pacote
# externo registra a sua aqui da mesma forma (grupo "prodeck.actions").
[project.entry-points."prodeck.actions"]
notify = "prodeck_agent.plugins.notify:plugin"

[project.urls]
Homepage = "https://github.com/tadash82/prodeck"
Repository = "https://github.com/tadash82/prodeck"
Issues = "https://github.com/tadash82/prodeck/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prodeck_agent"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "websockets>=16.0",
]
